<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- 首页 -->
    <string name="tab_home">地图</string>
    <string name="tab_information">消息</string>
    <string name="tab_record">终端</string>
    <string name="tab_me">更多</string>

    <!-- HomePageFragment -->
    <string name="title_homepage">宝贝</string>
    <string name="location_homepage">位置信息</string>
    <string name="type_and_time_homepage">时间和位置获取方式</string>
    <string name="offline_location_desc">正在获取设备信息，请稍后...</string>
    <string name="offline_device_error">请检查设备是否正常</string>
    <string name="go_there_homepage">到这去</string>

    <!-- ShowPathActivity -->
    <string name="time_show_path">今天</string>
    <string name="show_path">播放轨迹</string>
    <string name="no_path_info">今天暂无轨迹信息...</string>
    <string name="title_information">消        息</string>

    <!-- StudentAttendanceFragment -->
    <string name="title_student_attendance">考勤信息</string>
    <string name="student_name">学生姓名</string>

    <!-- UserLoginActivity -->
    <string name="user_register">注册</string>
    <string name="send_sms">获取验证码</string>
    <string name="next_step">注      册</string>
    <string name="user_login">登录</string>

    <!-- MeFragment -->
    <string name="safe_area">电子围栏</string>
    <string name="add_safe_area">添加电子围栏</string>
    <string name="area_name">点击编辑电子围栏名称</string>
    <string name="edit_safe_area">编辑电子围栏</string>
    <string name="add_safecard">添加学生卡</string>
    <string name="set_pic_lock">图形锁</string>
    <string name="alarm_mode">设备省电模式</string>
    <string name="family">按键设置</string>
    <string name="baby_info">宝贝信息</string>
    <string name="offline_map">离线地图</string>
    <string name="add_device">绑定设备</string>
    <string name="add_device_quickly">快速添加</string>
    <string name="add_device_hint">您需要绑定学生卡后才能正常使用功能！</string>
    <string name="chenge_count">切换用户</string>
    <string name="add_device_input">手动输入绑定号</string>
    
    
    <string name="standard_mode">标准模式</string>
    <string name="power_saving_mode">省电模式</string>
    
    
    
    
    
    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_retry_button_text">"重试"</string>
    <string name="lockpattern_continue_button_text">"继续"</string>
    <string name="lockpattern_confirm_button_text">"确认"</string>
    <string name="lockpattern_recording_intro_header">"绘制解锁图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"请再次绘制解锁图案"</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重试"</string>
    <string name="lockpattern_pattern_confirmed_header">"确认保存新解锁图案"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <string name="gesture_password_guide_text">你可以创建一个解锁图案，这样他人在借用你的手机时，将无法打开应用。</string>
    <string name="gesture_password_guide_creat_btn">创建手势密码</string>

</resources>