<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- 引入布局文件 -->

    <com.amap.api.maps.MapView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_bottom_show_path"
        android:layout_below="@+id/rl_top_show_path" />

    <RelativeLayout
        android:id="@+id/rl_top_show_path"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@drawable/bg_title" >

        <ImageButton
            android:id="@+id/ib_back_show_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:background="@drawable/default_btn_bg"
            android:src="@drawable/ic_back" >
        </ImageButton>

        <TextView
            android:id="@+id/tv_time_show_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/time_show_path"
            android:textColor="@color/safe_white"
            android:textSize="@dimen/text_size_title_homepage" 
            android:background="@drawable/default_btn_bg"
            />
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_time_show_path"
            android:src="@drawable/ic_pull_down_home"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom_show_path"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/safe_white" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp" 
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_location_show_path"
                    android:textSize="12sp"                    
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/location_homepage" />

                <TextView
                    android:id="@+id/tv_type_and_time_show_path"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/type_and_time_homepage"
                    android:textSize="8sp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/ib_show_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/default_btn_bg"
                android:src="@drawable/button_show_path"
                android:visibility="visible" 
                android:layout_marginRight="10dp"
                />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/safe_darkgray" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom_offline"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/safe_white"
        android:visibility="visible" >

        <TextView
            android:id="@+id/tv_no_path_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/offline_location_desc"
            android:textSize="18sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/safe_darkgray" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/ib_map_magnify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="150dp"
        android:layout_marginLeft="20dp"
        android:background="@color/safe_transparent"
        android:src="@drawable/ic_magnify" />

    <ImageButton
        android:id="@+id/ib_map_reduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="20dp"
        android:background="@color/safe_transparent"
        android:src="@drawable/ic_reduce" />

</RelativeLayout>