<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ll_container"
     >

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@drawable/bg_title" >

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/default_btn_bg"
            android:onClick="finishMyself"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_height"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/add_safe_area"
            android:textColor="@color/safe_white"
            android:textSize="@dimen/text_size_title_homepage" />
    </RelativeLayout>

    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_bottom"
        android:layout_below="@+id/rl_top" />

    <TextView
        android:id="@+id/tv_radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/login_blue"
        android:text="1000米"
        android:textColor="@color/safe_white"
         />

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="@color/safe_white" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" 
            android:gravity="center_vertical"
            >

            <TextView
                android:id="@+id/tv_area_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:layout_marginTop="5dp"
                android:text="@string/area_name"
                android:layout_marginLeft="20dp"
                android:textSize="@dimen/safe_com_text_size_large"
                android:textColor="#777777"
                 />

            <TextView
                android:id="@+id/tv_location_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/type_and_time_homepage"
                android:textSize="8sp" 
                android:visibility="gone"
                />

            <Button
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="40dp"
                android:onClick="addSafeArea"
                android:text="@string/add_safe_area" 
                android:textColor="@color/safe_white"
                android:background="@drawable/selector_btn_login"
                />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/rl_top"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_et_register"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:text="1000米"
                android:textSize="@dimen/safe_com_text_size_small" />

            <SeekBar
                android:id="@+id/seekbar"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:max="70"
                android:maxHeight="4.0dip"
                android:minHeight="4.0dip"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:progressDrawable="@drawable/po_seekbar"
                android:thumb="@drawable/seekbar_thumb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:text="8000米"
                android:textSize="@dimen/safe_com_text_size_small" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>